fixed y z-index al navbar

--- a/CV/css/styles.css
+++ b/CV/css/styles.css
@@ -19,6 +19,7 @@ body {
     width: 100%;
     position: fixed;
     top: 0;
+    z-index: 99;
 }
 
 .navbar-list {
